Added obligation custom function handling